Atualizações na estrutura da aplicação e dos testes
